# HyperDex

./: .gitignore  .gitignore~  .gitmodules  .tarballignore  AUTHORS  BROKEN  CMakeLists.txt  LICENSE  Makefile.am  Makefile.am~  Makefile.win  README  README.md  SIGNED-OFF-BY  THIRD-PARTY  TODO  WANAL  admin_api.go  admin_test.go  api.go  autogen.sh  binary-test.cc  bouncer.py  check-for-distribution  cli.cc  config.h.in  configure.ac  coordinator.py  count-test.cc  daemon.cc  gentrace.py  hyper.diff  hyperclient.pc.in  hyperdex-admin.pc.in  hyperdex-coordinator  hyperdex-coordinator-control  hyperdex-datastructures-fuzz-test  hyperdex-json-bridge-python  hyperdex-migrate  hyperdex-migrate-data  (+23 more)
hyperclient/: CMakeLists.txt  Makefile.am  async_client.cc  client.cc  constants.h  hyperclient.cc  hyperclient.h  hyperclient.i  hyperclient_c_wrappers.cc  hyperclient_completedop.h  hyperclient_pending.cc  hyperclient_pending.h  hyperclient_pending_count.cc  hyperclient_pending_count.h  hyperclient_pending_get.cc  hyperclient_pending_get.h  hyperclient_pending_group_del.cc  hyperclient_pending_group_del.h  hyperclient_pending_search.cc  hyperclient_pending_search.h  hyperclient_pending_sorted_search.cc  hyperclient_pending_sorted_search.h  hyperclient_pending_statusonly.cc  hyperclient_pending_statusonly.h  keyop_info.gperf  keyop_info.h  sync_client.cc  util.cc  util.h
hyperclient/c/: testcompile.c
hyperclient/hyperclient/: async_client.h  client.h  result.h  returncode.h  sync_client.h
hyperclient/include/hyperclient/: client.h
hyperclient/java/: HyperClient.i  HyperClientException.java  HyperType.i  Makefile.am  hyperclient.i  javaclient.cc  javaclient.h  std_map.i  std_vector.i  syncclient.cc  syncclient.h
hyperclient/java/examples/: HyperAllTypes.java  HyperBinaryTest.java  HyperTest.java  README.txt  source_me
hyperclient/java/extra_src/: ByteArray.java  ByteArrayKeyedMap.java  ByteArrayKeyedSortedMap.java  ByteArraySortedSet.java  ByteArrayVector.java  Deferred.java  DeferredCondPut.java  DeferredCount.java  DeferredDelete.java  DeferredFromAttrs.java  DeferredGet.java  DeferredGroupDel.java  DeferredMapOp.java  HyperClientException.java  MapOp.java  MapOpAdd.java  MapOpAtomicAdd.java  MemoryError.java  Pending.java  Search.java  SearchBase.java  SimpleOp.java  SimpleOpAtomicAdd.java  SimpleOpPut.java  SortedSearch.java  ValueError.java
hyperclient/java/gen_code/: MapOp.template.java  SimpleOp.template.java  async_methods.template.java  gen_op_files  op_list.txt  sync_methods.template.java
hyperclient/nodejs/: .lock-wscript  async_test.js  hyperclient.cc  myobject.cc  myobject.h  sync_test.js  test.js  wscript
hyperclient/python/: hyperclient.pyx
hyperclient/ruby/: async_test.rb  hyperclient.c  ins.sh  test.rb
hyperclient/src/: client.cc
hyperdaemon/: CMakeLists.txt  Makefile.am  daemon.cc  daemon.h  datalayer.cc  datalayer.h  datatypes.cc  datatypes.h  logical.cc  logical.h  network_worker.cc  network_worker.h  ongoing_state_transfers.cc  ongoing_state_transfers.h  physical.cc  physical.h  replication_manager.cc  replication_manager.h  replication_manager_deferred.h  replication_manager_keyholder.h  replication_manager_pending.h  runtimeconfig.cc  runtimeconfig.h  searches.cc  searches.h
hyperdaemon/replication/: clientop.h  deferred.h  keyholder.h  keypair.h  pending.h  transfer_in.h  transfer_out.h
hyperdaemon/src/: daemon.cc  datalayer.cc  datalayer.h  logical.cc  logical.h  network_worker.cc  network_worker.h  physical.cc  physical.h  replication_manager.cc  replication_manager.h  searches.h
hyperdex/: CMakeLists.txt  Makefile.am  configuration.cc  configuration_parser.cc  coordinatorlink.cc  microop.cc  search.cc
hyperdex/hyperdex/: attribute.h  configuration.h  configuration_parser.h  coordinatorlink.h  datatype.h  hyperspace.h  ids.h  instance.h  microop.h  network_constants.h  packing.h
hyperdex/include/hyperdex/: ids.h  (+5 more)
hyperdex/src/: configuration.cc  coordinatorlink.cc  search.cc
hyperdisk/: CMakeLists.txt  Makefile.am  coordinate.h  disk.cc  log.cc  log_entry.h  reference.cc  shard.cc  shard.h  shard_constants.h  shard_snapshot.cc  shard_snapshot.h  shard_vector.cc  shard_vector.h  snapshot.cc  write_ahead_log.cc  write_ahead_log.h
hyperdisk/hyperdisk/: disk.h  returncode.h  snapshot.h
hyperdisk/src/: disk.cc  log.h  shard.h  shard_snapshot.h
hyperdisk/test/: Makefile.am  coordinate.cc  log.cc  log_entry.cc  shard.cc
hyperdisk/utils/: Makefile.am  shard-dumphashes.cc  shard-fsck.cc
hyperspacehashing/: Makefile.am  bithacks.h  cfloat.cc  cfloat.h  copint.cc  copint.h  equality_wildcard.cc  hashes.cc  hashes_internal.h  mask.cc  prefix.cc  range_match.cc  range_match.h  search.cc
hyperspacehashing/hyperspacehashing/: equality_wildcard.h  hashes.h  mask.h  prefix.h  search.h
hyperspacehashing/test/: Makefile.am  bithacks.cc  cfloat.cc  copint.cc  mask.cc  prefix.cc  search.cc
hyperspacehashing/utils/: Makefile.am  cfloat.cc  copint.cc
src/: CMakeLists.txt  hdcoordinator-setup.py  hyperdex-binary.cc  hyperdex-coordinator-ctl.in  hyperdex-coordinator.in  hyperdex-count.cc  hyperdex-repl-tester.cc  hyperdex-trace-player.cc  hyperdexd.cc
src/city/: city.h
src/configuration/: configuration.cc  configuration.h  coordinatorlink.cc  coordinatorlink.h
src/hdcoordinator/: __init__.py  client.py  coordinator.py  parser.py
src/hyperdex/: bloom.cc  bloom.h  buffer.h  client.cc  configuration.cc  configuration.h  coordinatorlink.cc  coordinatorlink.h  daemon.cc  daemon.h  datalayer.cc  datalayer.h  disk.cc  disk.h  entity.cc  entity.h  fifo_work_queue.h  hyperdexd.cc  hyperdexd.h  hyperdexm.cc  hyperdexm.h  hyperspace.h  ids.h  limits.h  lockingq.h  log.cc  log.h  logical.cc  logical.h  mapper.cc  masterlink.cc  masterlink.h  network_constants.h  network_worker.cc  network_worker.h  physical.cc  physical.h  query.cc  region.cc  region.h  (+18 more)
src/hyperdisk/: disk.cc  log.cc  log.h  shard.cc  shard.h
src/libs/: CMakeLists.txt
src/ycsb/: CMakeLists.txt
ycsb/: CMakeLists.txt  Makefile.am
ycsb/hyperclient/: HyperClientYCSB.java
(+1912 files in other folders)
